--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       --hdr-h: 64px;
 
       --border: rgba(255,255,255,.10);
-      --border2: rgba(255,255,255,.16);
       --shadow: 0 22px 70px rgba(0,0,0,.55);
     }
 
@@ -32,6 +31,7 @@
       color: var(--text);
       font-family:"Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
+
       background:
         radial-gradient(900px 520px at 18% 18%, rgba(120,211,255,.10), transparent 60%),
         radial-gradient(700px 420px at 78% 30%, rgba(255,255,255,.06), transparent 60%),
@@ -39,9 +39,10 @@
       background-color: var(--bg);
     }
 
-    a{ color:inherit; }
+    a{ color:inherit; text-decoration: none; }
+    a:hover{ color: var(--text); }
 
-    /* ===== Minimal Header ===== */
+    /* ===== Minimal header (no CV/email) ===== */
     header{
       position: fixed;
       inset: 0 0 auto 0;
@@ -63,45 +64,33 @@
       gap: 18px;
     }
 
-    /* brand in the middle feels “poster-ish”, but keep it left if you prefer */
     .brand{
       font-family:"Bebas Kai", system-ui, sans-serif;
       letter-spacing: .18em;
-      text-decoration:none;
       color: var(--text);
       white-space: nowrap;
-      padding: 8px 10px;
+      padding: 6px 0;
     }
 
     .menu{
       list-style:none;
       display:flex;
       align-items:center;
-      gap: 10px;
+      gap: 14px;
       margin:0;
       padding:0;
       font-size:.94rem;
       color: var(--muted);
     }
-
     .menu > li > a{
-      display:inline-flex;
-      align-items:center;
-      gap: 8px;
-      text-decoration:none;
-      color: inherit;
-      padding: 8px 10px;
-      transition: color .15s ease, opacity .15s ease;
-      white-space: nowrap;
+      padding: 8px 0;
       opacity: .9;
+      transition: opacity .15s ease, color .15s ease;
+      white-space: nowrap;
     }
-    .menu > li > a:hover{
-      color: var(--text);
-      opacity: 1;
-    }
+    .menu > li > a:hover{ opacity: 1; color: var(--text); }
 
     .dropdown{ position:relative; }
-
     .dropdown-content{
       position:absolute;
       top: calc(100% + 10px);
@@ -124,20 +113,16 @@
       transform: translateY(-4px);
       transition: opacity .16s ease, transform .16s ease, visibility .16s ease;
     }
-
     .dropdown:hover .dropdown-content,
     .dropdown:focus-within .dropdown-content{
       opacity: 1;
       visibility: visible;
       transform: translateY(0);
     }
-
     .dropdown-content a{
       display:block;
       padding: 10px 10px;
       color: var(--muted);
-      text-decoration:none;
-      border-radius: 0;
     }
     .dropdown-content a:hover{
       color: var(--text);
@@ -146,33 +131,27 @@
 
     main{ padding-top: var(--hdr-h); }
 
-    /* ===== Hero ===== */
+    /* ===== Hero: centered column, square corners ===== */
     .hero{
       min-height: calc(100vh - var(--hdr-h));
       display:flex;
       align-items:center;
       justify-content:center;
-      padding: 44px 22px 64px;
+      padding: 52px 22px 64px;
     }
 
-    /* single centered “column” */
-    .panel{
-      width: min(780px, 100%);
-      border: 1px solid var(--border);
+    .hero-card{
+      width: min(860px, 100%);
+      border: 1px solid rgba(255,255,255,.10);
       box-shadow: var(--shadow);
-      background: linear-gradient(135deg, rgba(8,10,14,.78), rgba(8,10,14,.44));
-      backdrop-filter: blur(12px);
 
-      /* square corners */
+      /* square */
       border-radius: 0;
 
-      overflow: hidden;
-    }
-
-    /* Top intro stays fixed (not scroll) */
-    .panel-top{
-      padding: 26px 28px 18px;
-      border-bottom: 1px solid rgba(255,255,255,.08);
+      background: linear-gradient(135deg, rgba(8,10,14,.78), rgba(8,10,14,.42));
+      backdrop-filter: blur(12px);
+      padding: 34px 34px 28px;
+      text-align:center;
     }
 
     .kicker{
@@ -191,152 +170,126 @@
     }
 
     h1{
-      margin: 14px 0 6px;
+      margin: 14px 0 8px;
       font-family:"Bebas Kai", system-ui, sans-serif;
-      font-size: 3.25rem;
+      font-size: 3.35rem;
       letter-spacing: .12em;
       line-height: 1.02;
-      text-align: center; /* user asked to center */
     }
 
     .role{
-      margin: 0;
-      text-align:center;
+      margin: 0 auto 16px;
+      max-width: 60ch;
+      font-size: 1.08rem;
       color: var(--muted);
-      font-size: 1.05rem;
     }
 
-    .scroll-hint{
-      margin-top: 16px;
-      display:flex;
-      justify-content:center;
+    .intro{
+      margin: 0 auto;
+      max-width: 72ch;
+      font-size: 1.06rem;
+      line-height: 1.85;
+      color: rgba(242,244,247,.90);
+    }
+
+    .scroll-cue{
+      margin: 18px auto 0;
+      display:inline-flex;
       align-items:center;
       gap: 10px;
       color: var(--muted2);
-      font-size: .88rem;
-      letter-spacing: .10em;
+      font-size: .82rem;
+      letter-spacing: .18em;
       text-transform: uppercase;
-      user-select: none;
+      user-select:none;
     }
-    .scroll-hint .arrow{
-      transform: translateY(-1px);
+    .scroll-cue span{
+      color: rgba(120,211,255,.95);
       animation: bob 1.8s ease-in-out infinite;
-      color: rgba(120,211,255,.9);
     }
     @keyframes bob{
       0%,100%{ transform: translateY(-1px); opacity:.85; }
-      50%{ transform: translateY(3px); opacity:1; }
+      50%{ transform: translateY(4px); opacity:1; }
     }
 
-    /* Scroll area (your photo + bio phrases) */
-    .panel-scroll{
-      height: 380px;              /* desktop “dossier window” */
-      overflow-y: auto;
-      scroll-snap-type: y mandatory;
-      scrollbar-width: thin;
-      scrollbar-color: rgba(120,211,255,.35) rgba(255,255,255,.06);
-    }
-    .panel-scroll::-webkit-scrollbar{ width: 10px; }
-    .panel-scroll::-webkit-scrollbar-track{ background: rgba(255,255,255,.04); }
-    .panel-scroll::-webkit-scrollbar-thumb{
-      background: rgba(120,211,255,.22);
-      border: 1px solid rgba(255,255,255,.10);
-    }
-
+    /* ===== Page sections (full-page scroll, editorial) ===== */
     .section{
-      scroll-snap-align: start;
-      padding: 24px 28px;
+      max-width: var(--max);
+      margin: 0 auto;
+      padding: 84px 22px;
     }
 
-    .lead{
-      margin: 0;
-      font-size: 1.06rem;
-      line-height: 1.8;
-      color: rgba(242,244,247,.92);
-      text-align: center; /* requested */
+    .section-card{
+      border: 1px solid rgba(255,255,255,.10);
+      box-shadow: var(--shadow);
+      background: linear-gradient(180deg, rgba(8,10,14,.70), rgba(8,10,14,.38));
+      backdrop-filter: blur(10px);
+      border-radius: 0; /* square */
+      padding: 30px;
     }
 
-    .divider{
-      height: 1px;
-      margin: 0;
-      background: linear-gradient(90deg, transparent, rgba(120,211,255,.35), transparent);
-      opacity: .9;
-    }
-
-    /* Photo + bio layout */
-    .bio-grid{
+    .two-col{
       display:grid;
-      grid-template-columns: 160px 1fr;
-      gap: 18px;
+      grid-template-columns: 1fr 1.15fr;
+      gap: 28px;
       align-items: start;
     }
 
     .portrait{
-      width: 160px;
-      height: 200px;
+      width: 100%;
+      height: 440px;
       object-fit: cover;
-      border: 1px solid rgba(255,255,255,.12);
-      border-radius: 0; /* square */
+      border-radius: 0;
+      border: 1px solid rgba(255,255,255,.10);
       filter: contrast(1.02) saturate(.95);
+    }
+
+    .bio-title{
+      margin: 0 0 14px;
+      font-size: .9rem;
+      letter-spacing: .18em;
+      text-transform: uppercase;
+      color: var(--muted2);
+      font-weight: 600;
     }
 
     .bio-lines{
       margin: 0;
       padding: 0;
-      list-style:none;
+      list-style: none;
       display:flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 12px;
       color: var(--muted);
-      line-height: 1.65;
-      font-size: 1.02rem;
+      line-height: 1.7;
+      font-size: 1.03rem;
     }
-
     .bio-lines strong{
       color: rgba(242,244,247,.92);
       font-weight: 600;
     }
 
-    .cta-row{
+    /* Optional: a clean set of big links (like editorial navigation) */
+    .links{
+      margin-top: 22px;
       display:flex;
-      justify-content:center;
-      gap: 10px;
       flex-wrap: wrap;
-      margin-top: 8px;
+      gap: 12px 18px;
+      justify-content: flex-start;
     }
-    .cta{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      padding: 10px 14px;
-      border-radius: 0; /* square */
-      text-decoration:none;
-      border: 1px solid rgba(255,255,255,.12);
-      background: rgba(255,255,255,.04);
-      color: var(--text);
-      transition: transform .15s ease, background .15s ease, border-color .15s ease;
-      font-size: .95rem;
+    .link{
+      border-bottom: 1px solid rgba(120,211,255,.55);
+      padding-bottom: 2px;
+      color: rgba(242,244,247,.92);
+      letter-spacing: .02em;
     }
-    .cta:hover{
-      transform: translateY(-1px);
-      background: rgba(255,255,255,.06);
-      border-color: rgba(255,255,255,.16);
-    }
-    .cta.primary{
-      border-color: rgba(120,211,255,.55);
-      background: rgba(120,211,255,.12);
-    }
-    .cta.primary:hover{
-      background: rgba(120,211,255,.18);
-      border-color: rgba(120,211,255,.75);
-    }
+    .link:hover{ color: var(--accent); }
 
-    /* desktop-first; hide menu on smaller screens for now */
+    /* Desktop-first; quick mobile fallback */
     @media (max-width: 980px){
       .menu{ display:none; }
-      .panel-scroll{ height: 420px; }
-      .bio-grid{ grid-template-columns: 1fr; }
-      .portrait{ width: 100%; height: 260px; }
+      .two-col{ grid-template-columns: 1fr; }
+      .portrait{ height: 320px; }
     }
   </style>
 </head>
@@ -372,94 +325,14 @@
   </header>
 
   <main>
-    <section class="hero">
-      <div class="panel" aria-label="Intro panel">
-        <div class="panel-top">
-          <div class="kicker"><span class="dot"></span> MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
-          <h1>MARIANA TORRES</h1>
-          <p class="role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
-
-          <div class="scroll-hint" aria-hidden="true">
-            Scroll <span class="arrow">↓</span>
-          </div>
-        </div>
-
-        <div class="panel-scroll" id="panelScroll">
-          <!-- Section 1: short intro -->
-          <div class="section">
-            <p class="lead">
-              Working across moving image archives, preservation practices, and analogue film processes.
-              My work connects research, technical practice, and artistic approaches to the materiality of film.
-            </p>
-
-            <div class="cta-row">
-              <a class="cta primary" href="projects.html">View projects</a>
-              <a class="cta" href="about.html">About</a>
-            </div>
-          </div>
-
-          <div class="divider"></div>
-
-          <!-- Section 2: photo + bio lines -->
-          <div class="section">
-            <div class="bio-grid">
-              <img class="portrait" src="me.jpg" alt="Portrait of Mariana Torres" />
-              <ul class="bio-lines">
-                <li><strong>Based in:</strong> Lisbon (PT) / available for collaborations</li>
-                <li><strong>Focus:</strong> preservation workflows, analogue film practice, moving image research</li>
-                <li><strong>Approach:</strong> care, material thinking, technical documentation &amp; artistic inquiry</li>
-                <li><strong>Tools:</strong> film handling, inspection, metadata, digitization coordination, writing</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="divider"></div>
-
-          <!-- Section 3: a few “bio phrases” (tight + punchy) -->
-          <div class="section">
-            <p class="lead" style="color: var(--muted);">
-              I’m interested in the ethics of preservation, the poetics of obsolescence, and the tactile intelligence of film.
-              <br /><br />
-              I work between institutions, labs, and personal practice—building bridges between access, process, and meaning.
-            </p>
-          </div>
-
-          <div class="divider"></div>
-
-          <!-- Section 4: optional quick contact teaser (still no email in header) -->
-          <div class="section">
-            <p class="lead" style="color: var(--muted);">
-              For commissions, collaborations, or archival work, please use the contact details on the About page.
-            </p>
-            <div class="cta-row">
-              <a class="cta" href="about.html">Go to About</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <script>
-    // Optional nicety: if you want the mouse wheel to scroll inside the panel
-    // even when the cursor is over the background.
-    (function(){
-      const scroller = document.getElementById("panelScroll");
-      if (!scroller) return;
-
-      window.addEventListener("wheel", (e) => {
-        // only intercept if panel is visible in viewport
-        const rect = scroller.getBoundingClientRect();
-        const inView = rect.top < window.innerHeight && rect.bottom > 0;
-        if (!inView) return;
-
-        // if user is actively scrolling page (rare here), don't fight them
-        // just gently nudge the panel scroll.
-        scroller.scrollBy({ top: e.deltaY, left: 0, behavior: "auto" });
-      }, { passive: true });
-    })();
-  </script>
-</body>
-</html>
-
-
+    <!-- HERO: only name + description -->
+    <section class="hero" id="top">
+      <div class="hero-card">
+        <div class="kicker"><span class="dot"></span> MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
+        <h1>MARIANA TORRES</h1>
+        <p class="role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
+        <p class="intro">
+          Working across moving image archives, preservation practices, and analogue film processes.
+          My work connects research, technical practice, and artistic approaches to the materiality of film.
+        </p>
+        <div class="scroll-cue">Scroll <span>↓</span
