--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     <!-- HERO: only name + description -->
     <section class="hero" id="top">
   <div class="hero-content">
-    <div class="kicker"><span class="dot"></span> MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
+    <div class="kicker"></span> MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
     <h1>MARIANA TORRES</h1>
     <p class="role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
     <p class="intro">
