--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
         radial-gradient(700px 420px at 78% 30%, rgba(255,255,255,.06), transparent 60%),
         url("Timeline2.gif.gif") center/cover no-repeat fixed;
       background-color: var(--bg);
+      body::before{
+  content:"";
+  position: fixed;
+  inset: 0;
+  background: rgba(6,7,11,.35); /* ajusta: 0.25 mais leve | 0.45 mais forte */
+  pointer-events: none;
+  z-index: 0;
+}
+header, main{
+  position: relative;
+  z-index: 1;
+}
     }
 
     a{ color:inherit; text-decoration: none; }
