--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       --max: 1120px;
       --hdr-h: 64px;
 
-      --border: rgba(255,255,255,.10);
+      --border: rgba(255,255,255,.12);
       --shadow: 0 22px 70px rgba(0,0,0,.55);
     }
 
@@ -33,38 +33,37 @@
       -webkit-font-smoothing: antialiased;
 
       background:
-        radial-gradient(900px 520px at 18% 18%, rgba(120,211,255,.10), transparent 60%),
-        radial-gradient(700px 420px at 78% 30%, rgba(255,255,255,.06), transparent 60%),
         url("Timeline2.gif.gif") center/cover no-repeat fixed;
       background-color: var(--bg);
-      body::before{
-  content:"";
-  position: fixed;
-  inset: 0;
-  background: rgba(6,7,11,.35); /* ajusta: 0.25 mais leve | 0.45 mais forte */
-  pointer-events: none;
-  z-index: 0;
-}
-header, main{
-  position: relative;
-  z-index: 1;
-}
     }
 
-    a{ color:inherit; text-decoration: none; }
+    /* Soft overlay ABOVE the gif (helps text) */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background:
+        radial-gradient(1200px 680px at 50% 35%, rgba(6,7,11,.60), rgba(6,7,11,.18) 60%, rgba(6,7,11,.35) 100%),
+        linear-gradient(to bottom, rgba(6,7,11,.25), rgba(6,7,11,.25));
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    header, main{ position: relative; z-index: 1; }
+
+    a{ color:inherit; text-decoration:none; }
     a:hover{ color: var(--text); }
 
-    /* ===== Minimal header (no CV/email) ===== */
+    /* ===== Minimal header ===== */
     header{
       position: fixed;
       inset: 0 0 auto 0;
       height: var(--hdr-h);
       z-index: 1000;
-      background: linear-gradient(to bottom, rgba(6,7,11,.86), rgba(6,7,11,.45));
+      background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.40));
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
-
     nav{
       max-width: var(--max);
       margin: 0 auto;
@@ -75,7 +74,6 @@ header, main{
       justify-content: space-between;
       gap: 18px;
     }
-
     .brand{
       font-family:"Bebas Kai", system-ui, sans-serif;
       letter-spacing: .18em;
@@ -83,7 +81,6 @@ header, main{
       white-space: nowrap;
       padding: 6px 0;
     }
-
     .menu{
       list-style:none;
       display:flex;
@@ -112,13 +109,12 @@ header, main{
       padding: 10px;
       list-style:none;
 
-      border: 1px solid var(--border);
+      border: 1px solid rgba(255,255,255,.10);
       background: rgba(8,10,14,.92);
       box-shadow: var(--shadow);
       backdrop-filter: blur(12px);
 
-      /* square corners */
-      border-radius: 0;
+      border-radius: 0; /* square */
 
       opacity: 0;
       visibility: hidden;
@@ -143,41 +139,96 @@ header, main{
 
     main{ padding-top: var(--hdr-h); }
 
-    /* ===== Hero: centered column, square corners ===== */
+    /* ===== HERO (text + two “light/sombra” plates aligned to grid) ===== */
     .hero{
       min-height: calc(100vh - var(--hdr-h));
       display:flex;
       align-items:center;
       justify-content:center;
-      padding: 52px 22px 64px;
-/* HERO without box: just text + subtle gradient for legibility */
-.hero{
-  position: relative;
-  min-height: calc(100vh - var(--hdr-h));
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  padding: 52px 22px 64px;
-}
+      padding: 56px 22px 76px;
+    }
 
-/* gradient “sheet” behind text (no border, no box) */
-.hero::before{
-  content:"";
-  position:absolute;
-  inset: 0;
-  background:
-    radial-gradient(900px 420px at 50% 42%, rgba(6,7,11,.78), rgba(6,7,11,.18) 62%, transparent 78%),
-    linear-gradient(to bottom, rgba(6,7,11,.22), rgba(6,7,11,.10));
-  pointer-events:none;
-}
+    /* This is your grid anchor */
+    .hero-wrap{
+      width: min(980px, 100%);
+      position: relative;
+      display: flex;
+      justify-content: center;
+    }
 
-/* wrapper for the text block */
-.hero-content{
-  position: relative;
-  width: min(860px, 100%);
-  text-align: center;
-  padding: 10px 0; /* breathing, but no “card” */
-}
+    /* The text column (grid) */
+    .hero-content{
+      width: min(760px, 100%);
+      text-align: center;
+      position: relative;
+      z-index: 3; /* above plates */
+      padding: 10px 0;
+    }
+
+    /* Plates layer */
+    .plates{
+      position: absolute;
+      inset: 0;
+      pointer-events:none;
+      z-index: 2; /* above background overlay, under text */
+    }
+
+    /* Shared plate base */
+    .plate{
+      position:absolute;
+      border-radius: 0;            /* square corners */
+      border: 1px solid rgba(255,255,255,.10);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 18px 55px rgba(0,0,0,.35);
+      opacity: .95;
+    }
+
+    /*
+      Alignment logic:
+      - we treat the text column as center line,
+      - plates are placed using left: 50% + translateX(-50%)
+      - then offset in X/Y to get overlap but still “systematic”
+    */
+
+    /* Plate A = “luz” (cool / cyan spill) */
+    .plate.light{
+      left: 50%;
+      top: 6px;
+      width: 720px;
+      height: 360px;
+      transform: translateX(-50%) translateX(-110px); /* shift left */
+      background:
+        linear-gradient(135deg, rgba(120,211,255,.18), rgba(8,10,14,.08) 55%, rgba(255,255,255,.06)),
+        radial-gradient(700px 260px at 18% 18%, rgba(120,211,255,.22), transparent 55%);
+      mix-blend-mode: screen; /* makes it feel like projected light */
+      border-color: rgba(120,211,255,.18);
+    }
+
+    /* Plate B = “sombra” (warm-ish dark) */
+    .plate.shadow{
+      left: 50%;
+      top: -18px;
+      width: 660px;
+      height: 410px;
+      transform: translateX(-50%) translateX(150px); /* shift right */
+      background:
+        linear-gradient(180deg, rgba(8,10,14,.62), rgba(8,10,14,.28)),
+        radial-gradient(680px 320px at 70% 25%, rgba(255,255,255,.08), transparent 60%);
+      border-color: rgba(255,255,255,.10);
+      opacity: .90;
+    }
+
+    /* optional: a super subtle grain overlay on plates */
+    .plate::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      background-image:
+        radial-gradient(circle at 20% 30%, rgba(255,255,255,.05) 0, rgba(255,255,255,0) 40%),
+        radial-gradient(circle at 70% 60%, rgba(255,255,255,.04) 0, rgba(255,255,255,0) 45%);
+      opacity: .35;
+      pointer-events:none;
+    }
 
     .kicker{
       display:inline-flex;
@@ -200,9 +251,7 @@ header, main{
       font-size: 3.35rem;
       letter-spacing: .12em;
       line-height: 1.02;
-  text-shadow: 0 10px 35px rgba(0,0,0,.55);
-}
-
+      text-shadow: 0 12px 42px rgba(0,0,0,.55);
     }
 
     .role{
@@ -210,6 +259,7 @@ header, main{
       max-width: 60ch;
       font-size: 1.08rem;
       color: var(--muted);
+      text-shadow: 0 10px 35px rgba(0,0,0,.45);
     }
 
     .intro{
@@ -217,10 +267,8 @@ header, main{
       max-width: 72ch;
       font-size: 1.06rem;
       line-height: 1.85;
-      color: rgba(242,244,247,.90);
-  text-shadow: 0 8px 28px rgba(0,0,0,.45);
-}
-
+      color: rgba(242,244,247,.92);
+      text-shadow: 0 10px 32px rgba(0,0,0,.42);
     }
 
     .scroll-cue{
@@ -243,84 +291,11 @@ header, main{
       50%{ transform: translateY(4px); opacity:1; }
     }
 
-    /* ===== Page sections (full-page scroll, editorial) ===== */
-    .section{
-      max-width: var(--max);
-      margin: 0 auto;
-      padding: 84px 22px;
-    }
-
-    .section-card{
-      border: 1px solid rgba(255,255,255,.10);
-      box-shadow: var(--shadow);
-      background: linear-gradient(180deg, rgba(8,10,14,.70), rgba(8,10,14,.38));
-      backdrop-filter: blur(10px);
-      border-radius: 0; /* square */
-      padding: 30px;
-    }
-
-    .two-col{
-      display:grid;
-      grid-template-columns: 1fr 1.15fr;
-      gap: 28px;
-      align-items: start;
-    }
-
-    .portrait{
-      width: 100%;
-      height: 440px;
-      object-fit: cover;
-      border-radius: 0;
-      border: 1px solid rgba(255,255,255,.10);
-      filter: contrast(1.02) saturate(.95);
-    }
-
-    .bio-title{
-      margin: 0 0 14px;
-      font-size: .9rem;
-      letter-spacing: .18em;
-      text-transform: uppercase;
-      color: var(--muted2);
-      font-weight: 600;
-    }
-
-    .bio-lines{
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display:flex;
-      flex-direction: column;
-      gap: 12px;
-      color: var(--muted);
-      line-height: 1.7;
-      font-size: 1.03rem;
-    }
-    .bio-lines strong{
-      color: rgba(242,244,247,.92);
-      font-weight: 600;
-    }
-
-    /* Optional: a clean set of big links (like editorial navigation) */
-    .links{
-      margin-top: 22px;
-      display:flex;
-      flex-wrap: wrap;
-      gap: 12px 18px;
-      justify-content: flex-start;
-    }
-    .link{
-      border-bottom: 1px solid rgba(120,211,255,.55);
-      padding-bottom: 2px;
-      color: rgba(242,244,247,.92);
-      letter-spacing: .02em;
-    }
-    .link:hover{ color: var(--accent); }
-
-    /* Desktop-first; quick mobile fallback */
+    /* quick mobile fallback */
     @media (max-width: 980px){
       .menu{ display:none; }
-      .two-col{ grid-template-columns: 1fr; }
-      .portrait{ height: 320px; }
+      .plate.light{ width: 92vw; transform: translateX(-50%) translateX(-6vw); }
+      .plate.shadow{ width: 86vw; transform: translateX(-50%) translateX(6vw); }
     }
   </style>
 </head>
@@ -356,16 +331,35 @@ header, main{
   </header>
 
   <main>
-    <!-- HERO: only name + description -->
     <section class="hero" id="top">
-  <div class="hero-content">
-    <div class="kicker"></span> MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
-    <h1>MARIANA TORRES</h1>
-    <p class="role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
-    <p class="intro">
-      Working across moving image archives, preservation practices, and analogue film processes.
-      My work connects research, technical practice, and artistic approaches to the materiality of film.
-    </p>
-  </div>
-</section>
+      <div class="hero-wrap">
+        <!-- light/sombra plates -->
+        <div class="plates" aria-hidden="true">
+          <div class="plate shadow"></div>
+          <div class="plate light"></div>
+        </div>
 
+        <!-- text column -->
+        <div class="hero-content">
+          <div class="kicker"><span class="dot"></span> MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
+          <h1>MARIANA TORRES</h1>
+          <p class="role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
+          <p class="intro">
+            Working across moving image archives, preservation practices, and analogue film processes.
+            My work connects research, technical practice, and artistic approaches to the materiality of film.
+          </p>
+          <div class="scroll-cue">Scroll <span>↓</span></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- rest of page follows (full-page scroll) -->
+    <section style="max-width:1120px;margin:0 auto;padding:84px 22px;color:rgba(242,244,247,.75);">
+      <!-- placeholder section just so you can see the scroll working -->
+      <p style="margin:0;line-height:1.8;">
+        Next section here (photo / selected work / etc).
+      </p>
+    </section>
+  </main>
+</body>
+</html>
